<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_azul"
    android:orientation="vertical"
    tools:context=".vistas.RegistarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Space
                    android:layout_width="25dp"
                    android:layout_height="match_parent" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextNome"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_weight="0"
                        android:hint="@string/registar_nome"
                        android:inputType="textPersonName"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_weight="0" />

                    <EditText
                        android:id="@+id/editTextNif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="10"
                        android:hint="@string/registar_nif"
                        android:inputType="number"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_weight="0" />

                    <EditText
                        android:id="@+id/editTextNumTelefone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="10"
                        android:hint="@string/registar_nr_telefone"
                        android:inputType="phone"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_weight="0" />

                    <EditText
                        android:id="@+id/editTextMorada"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="10"
                        android:hint="@string/registar_morada"
                        android:inputType="textPersonName"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_weight="0" />

                    <EditText
                        android:id="@+id/editTextUtilizador"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="10"
                        android:hint="@string/registar_utilizador"
                        android:inputType="textPersonName"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_weight="0" />

                    <EditText
                        android:id="@+id/editTextUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="10"
                        android:hint="@string/registar_email"
                        android:inputType="textEmailAddress"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_weight="0" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_weight="0"
                        android:hint="@string/registar_password"
                        android:inputType="textPersonName"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_weight="0" />


                    <Button
                        android:id="@+id/buttonRegistar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:onClick="onClickRegistar"
                        android:text="@string/registar"
                        android:textColor="#FFFDFD"
                        android:textStyle="bold"
                        app:backgroundTint="@android:color/holo_blue_light" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="0" />

                    <Button
                        android:id="@+id/buttonVoltar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:clickable="true"
                        android:onClick="onClickVoltar"
                        android:text="@string/registar_voltar"
                        android:textColor="#FFFDFD"
                        android:textStyle="bold"
                        app:backgroundTint="@android:color/holo_blue_light" />


                </LinearLayout>

                <Space
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>